--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Tapestry V2.0 Beta</title>
   <script src="./jquery.min.js"></script>
   <script src="./d3.v5.min.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
   <link crossorigin="anonymous"
         href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
