--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+  <meta content="utf-8" http-equiv="encoding">
   <title>Tapestry V2.0 Beta</title>
   <script src="./jquery.min.js"></script>
   <script src="./d3.v5.min.js"></script>
