--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
+  <meta content="text/html; charset=utf-8"
+        http-equiv="Content-Type">
+  <meta content="utf-8"
+        http-equiv="encoding">
   <title>Tapestry V2.0 Beta</title>
-  <script src="./jquery.min.js"></script>
-  <script src="./d3.v5.min.js"></script>
   <link crossorigin="anonymous"
         href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         rel="stylesheet">
   <link href="./tapestry.css"
         rel="stylesheet">
+  <link href="./libs/jquery-ui.min.css"
+        rel="stylesheet">
 </head>
 <body translate="no">
+  <header id="header">
+    <h1>Tapestry</h1>
+    <h2>Intercultural Understanding</h2>
+  </header>
   <div id="tapestry"></div>
   <div class="lightbox"
        id="video">
@@ -33,6 +39,21 @@
       </div>
     </div>
   </div>
-  <script src="./tapestry.js"></script>
+  <div id="instructions-wrapper">
+    Instructions: Click nodes to explore. Click play icon to play a video.
+  </div>
+  <footer id="footer">
+    Copyright &copy; 2019 <a href="http://tapestry-tool.com/">Tapestry Tool</a>
+  </footer>
+  <script src="./libs/jquery.min.js"
+        type="application/javascript"></script> 
+  <script src="./libs/jquery-ui.min.js"
+        type="application/javascript"></script> 
+  <script src="./libs/d3.v5.min.js"
+        type="application/javascript"></script> 
+  <script src="./libs/jscookie.js"
+        type="application/javascript"></script> 
+  <script src="./tapestry.js"
+        type="application/javascript"></script>
 </body>
 </html>
