Tapestry related files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <title>Tapestry V2.0 Beta</title>
-  <script src="./jquery.min.js"></script>
-  <script src="./d3.v5.min.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
   <link crossorigin="anonymous"
         href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
@@ -54,6 +52,9 @@
         type="application/javascript"></script> 
   <script src="./libs/jscookie.js"
         type="application/javascript"></script> 
+  <script type="application/javascript">
+    var siteUrl = "./";
+  </script>
   <script src="./tapestry.js"
         type="application/javascript"></script>
 </body>
