Tapestry related files

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         type="application/javascript"></script> 
   <script src="./libs/jscookie.js"
         type="application/javascript"></script> 
+  <script type="application/javascript">
+  var siteUrl = "./";
+  </script> 
   <script src="./tapestry.js"
         type="application/javascript"></script>
 </body>
