require width and height for the H5P in json file and dynamically adjust the spotlight to fit the iframe and the browser

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         type="application/javascript"></script> 
   <script src="./libs/d3.v5.min.js"
         type="application/javascript"></script> 
+  <script src="./libs/h5p-resizer.min.js"
+        type="application/javascript"></script> 
   <script src="./libs/jscookie.js"
         type="application/javascript"></script> 
   <script type="application/javascript">
