require width and height for the H5P in json file and dynamically adjust the spotlight to fit the iframe and the browser

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
+  <meta content="text/html; charset=utf-8"
+        http-equiv="Content-Type">
+  <meta content="utf-8"
+        http-equiv="encoding">
   <title>Tapestry V2.0 Beta</title>
   <script src="https://www.youtube.com/iframe_api"></script>
   <link crossorigin="anonymous"
@@ -50,11 +52,13 @@
         type="application/javascript"></script> 
   <script src="./libs/d3.v5.min.js"
         type="application/javascript"></script> 
+  <script src="./libs/h5p-resizer.min.js"
+        type="application/javascript"></script> 
   <script src="./libs/jscookie.js"
         type="application/javascript"></script> 
   <script type="application/javascript">
-    var siteUrl = "./";
-  </script>
+  var siteUrl = "./";
+  </script> 
   <script src="./tapestry.js"
         type="application/javascript"></script>
 </body>
