--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
   <div id="tapestry"></div>
   <div class="lightbox"
-       id="video">
+       id="iframe">
     <div class="lightbox-container">
       <div class="lightbox-content">
         <button class="lightbox-close"
