Add support for h5p (#15)
* Add support for h5p content to be played as a node
* Update node progress and icon when h5p video state changes
* require width and height for the H5P in json file and dynamically adjust the spotlight to fit the iframe and the browser
* Changes to make sure functionality works consistently for both mp4/video and h5p content types
* Code cleanup, variable renaming, etc.

Fixes #9

--- a/index.html
+++ b/index.html
@@ -21,24 +21,6 @@
     <h2>Intercultural Understanding</h2>
   </header>
   <div id="tapestry"></div>
-  <div class="lightbox"
-       id="video">
-    <div class="lightbox-container">
-      <div class="lightbox-content">
-        <button class="lightbox-close"
-             id="close-button">Close | ✕</button>
-        <div class="video-container"
-             id="video-container">
-          <!-- LATER: Support YouTube functionality-->
-          <!--        <iframe id="youtube" width="960" height="540" frameborder="0"
-        allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
-          <!--         <video id="mp4" width="960" height="540" frameborder="0" controls>
-                  <source type="video/mp4"></source>
-                </video> -->
-        </div>
-      </div>
-    </div>
-  </div>
   <div id="instructions-wrapper">
     Instructions: Click nodes to explore. Click play icon to play a video.
   </div>
@@ -51,8 +33,13 @@
         type="application/javascript"></script> 
   <script src="./libs/d3.v5.min.js"
         type="application/javascript"></script> 
+  <script src="./libs/h5p-resizer.min.js"
+        type="application/javascript"></script> 
   <script src="./libs/jscookie.js"
         type="application/javascript"></script> 
+  <script type="application/javascript">
+  var siteUrl = "./";
+  </script> 
   <script src="./tapestry.js"
         type="application/javascript"></script>
 </body>
