Add analytics / event capturing. Also: - Minor visual changes - Change siteUrl to jsonUrl - Move wrapText function inside the immediately-invoked function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <script src="./libs/jscookie.js"
         type="application/javascript"></script> 
   <script type="application/javascript">
-  var siteUrl = "./";
+  var jsonUrl = "./tapestry.json";
   </script> 
   <script src="./tapestry.js"
         type="application/javascript"></script>
