--- a/index.html
+++ b/index.html
@@ -15,76 +15,6 @@
   <link href="./libs/jquery-ui.min.css"
         rel="stylesheet">
 </head>
-<style>
-  body {font-family: Arial, Helvetica, sans-serif;}
-  * {box-sizing: border-box;}
-
-  /* The popup form - hidden by default */
-  .form-popup {
-    display: none;
-    position: fixed;
-    bottom: 0;
-    right: 15px;
-    border: 3px solid #f1f1f1;
-    z-index: 9;
-  }
-
-  /* Add styles to the form container */
-  .form-container {
-    max-width: 300px;
-    padding: 10px;
-    background-color: white;
-  }
-
-  /* Full-width input fields */
-  .form-container input[type=text], .form-container input[type=url] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    border: none;
-    background: #f1f1f1;
-
-  /* When the inputs get focus, do something */
-  .form-container input[type=text]:focus, .form-container input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-  }
-
-  /* Set a style for the submit/login button */
-  .form-container .btn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    margin-bottom:10px;
-    opacity: 0.8;
-  }
-
-  /* Add a red background color to the cancel button */
-  .form-container .cancel {
-    background-color: red;
-  }
-
-  /* Add some hover effects to buttons */
-  .form-container .btn:hover, .open-button:hover {
-    opacity: 1;
-  }
-
-  /* Contents details - hidden by default */
-  .contents-details {
-    display: none !important;
-  }
-
-  .mp4-content {
-    display: none !important;
-  }
-
-  .h5p-content {
-    display: none !important;
-  }
-</style>
 <body translate="no">
   <header id="header">
     <h1>Tapestry</h1>
@@ -94,10 +24,9 @@
   </div>
 
   <!-- FORM FOR ADDING NODES -->
-  <!--<button onclick="showAddNodeForm()">Add node to node 1</button>-->
   <div class="form-popup" id="addNodeForm" name="addNodeForm">
     <form class="form-container">
-      <h2>Add new sub-topic to [placeholder title]</h2>
+      <h2 id="formTitle"></h2>
       <label>Title
         <input name="title" type="text" placeholder="Enter the topic title" required >
       </label>
@@ -141,8 +70,14 @@
             <input name="h5p-mediaDuration" type="text" placeholder="Enter URL for MP4 Video" >
           </label>
         </div>
+        <div>
+          <label>Appears at:
+            <input name="appearsAt" type="text" placeholder="Enter time the media gets unlocked" >
+          </label>
+        </div>
       </div>
       <button type="submit" class="btn">Submit</button>
+      <button id="cancelButton" type="button" class="btn cancel">Cancel</button>
     </form>
   </div>
   <div id="instructions-wrapper">
@@ -166,32 +101,5 @@
   </script> 
   <script src="./tapestry.js"
         type="application/javascript"></script>
-  <script>
-//    function showAddNodeForm() {
-//      document.getElementById("addNodeForm").style.display = "block";
-//    }
-
-    $('#mediaFormat').on('change', function(){
-        var selectedType = $(this).val();
-        switch(selectedType)
-        {
-            case 'mp4':
-                $('#contents-details').show();
-                $('#mp4-content').show();
-                $('#h5p-content').hide();
-                break;
-            case 'h5p':
-                $('#contents-details').show();
-                $('#mp4-content').hide();
-                $('#h5p-content').show();
-                break;
-            default:
-                $('#contents-details').hide();
-                $('#mp4-content').hide();
-                $('#h5p-content').hide();
-                break;
-        }
-    });
-  </script>
 </body>
 </html>
