Added functionality userTypes and appearsAt fields to form

--- a/index.html
+++ b/index.html
@@ -76,6 +76,36 @@
           </label>
         </div>
       </div>
+      <div>
+        <h3>User Types:</h3>
+        <label>Admin
+          <div class="dropdown">
+            <select id="admin" name="admin">
+              <option value="normal">Normal</option>
+              <option value="optional">Optional</option>
+              <option value="hidden">Hidden</option>
+            </select>
+          </div>
+        </label>
+        <label>Consumer
+          <div class="dropdown">
+            <select id="consumer" name="consumer">
+              <option value="normal">Normal</option>
+              <option value="optional">Optional</option>
+              <option value="hidden">Hidden</option>
+            </select>
+          </div>
+        </label>
+        <label>Editor
+          <div class="dropdown">
+            <select id="editor" name="editor">
+              <option value="normal">Normal</option>
+              <option value="optional">Optional</option>
+              <option value="hidden">Hidden</option>
+            </select>
+          </div>
+        </label>
+      </div>
       <button type="submit" class="btn">Submit</button>
       <button id="cancelButton" type="button" class="btn cancel">Cancel</button>
     </form>
