added UI slider, bug

--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
   <header id="header">
     <h1>Tapestry</h1>
     <h2>Intercultural Understanding</h2>
+
   </header>
+
   <div id="tapestry"></div>
+  <div id="slider-wrapper">
+    <p id="value">value</p>
+    <div id="slider">slider</div>
+  </div>
   <div id="instructions-wrapper">
     Instructions: Click nodes to explore. Click play icon to play a video.
+
   </div>
+
   <footer id="footer">
     Copyright &copy; 2019 <a href="http://tapestry-tool.com/">Tapestry Tool</a>
+
   </footer>
   <script src="./libs/jquery.min.js"
         type="application/javascript"></script> 
@@ -42,5 +51,10 @@
   </script> 
   <script src="./tapestry.js"
         type="application/javascript"></script>
+  <script src="https://unpkg.com/d3-simple-slider"
+        type="application/javascript"></script>
+  <script src="https://d3js.org/d3.v5.js"
+        type="application/javascript"></script>
+
 </body>
 </html>
