--- a/index.html
+++ b/index.html
@@ -22,19 +22,13 @@
     <div id="slider-wrapper">
       <input type="range" min="1" max="3" value="2" class="slider" id="myRange">
     </div>
-
   </header>
-
   <div id="tapestry"></div>
-
   <div id="instructions-wrapper">
     Instructions: Click nodes to explore. Click play icon to play a video.
-
   </div>
-
   <footer id="footer">
     Copyright &copy; 2019 <a href="http://tapestry-tool.com/">Tapestry Tool</a>
-
   </footer>
   <script src="./libs/jquery.min.js"
         type="application/javascript"></script> 
@@ -50,8 +44,7 @@
   var jsonUrl = "./tapestry.json";
   </script> 
   <script src="./tapestry.js"
-        type="application/javascript"></script>
-
-
+        type="application/javascript">
+  </script>
 </body>
 </html>
