--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Tapestry</h1>
     <h2>Intercultural Understanding</h2>
     <div id="slider-wrapper">
-      <input type="range" min="1" max="3" value="2" class="slider" id="myRange">
+      <input type="range" min="1" max="3" value="2" class="slider" id="tapestry-depth-slider">
     </div>
   </header>
   <div id="tapestry"></div>
