--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
   <header id="header">
     <h1>Tapestry</h1>
     <h2>Intercultural Understanding</h2>
-    <div id="slider-wrapper">
-      <input type="range" min="1" max="3" value="2" class="slider" id="myRange">
-    </div>
   </header>
   <div id="tapestry"></div>
   <div id="instructions-wrapper">
@@ -44,7 +41,6 @@
   var jsonUrl = "./tapestry.json";
   </script> 
   <script src="./tapestry.js"
-        type="application/javascript">
-  </script>
+        type="application/javascript"></script>
 </body>
 </html>
